<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.chrivieh.brewce.MainActivity">
    <item
        android:id="@+id/action_scan"
        android:orderInCategory="100"
        android:title="@string/action_scan"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_kp"
        android:orderInCategory="100"
        android:title="@string/action_set_kp"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_ki"
        android:orderInCategory="100"
        android:title="@string/action_set_ki"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_set_kd"
        android:orderInCategory="100"
        android:title="@string/action_set_kd"
        app:showAsAction="never" />
</menu>
